--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorRed">#ba2200</color>
+    <color name="colorBlue">#0084b9</color>
+    <color name="colorGreen">#008702</color>
 </resources>
