--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
     <WebView
         android:layout_width="match_parent"
@@ -33,5 +33,5 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:indeterminate="true"
         android:id="@+id/progressBar"/>
-
+    </RelativeLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
