--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -13,13 +13,13 @@
         android:background="@color/black"/>
 
     <ImageView
+        android:id="@+id/wifi"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_wifi_off"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,6 +28,8 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="16sp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wifi" />
 
 </com.google.android.material.card.MaterialCardView>
