--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="46dp"
+        android:paddingBottom="90dp"
         android:paddingTop="24dp"
         android:background="@color/black"/>
 
@@ -19,7 +19,9 @@
         android:src="@drawable/ic_wifi_off"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,9 +29,12 @@
         android:text="@string/check_connection_text"
         android:textColor="@color/white"
         android:textStyle="bold"
+android:gravity="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifi" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_gravity="bottom"/>
 
 </com.google.android.material.card.MaterialCardView>
